# fullstack_madr

backend/: pyproject.toml
backend/src/: app.py
backend/src/schemas/: users.py
backend/tests/: test_app.py
